# meu-chat-app

./: .gitignore  MeuChat - Planejamento de Arquite.md  README.md  index.html  package.json  startup.bat  tailwind.config.ts  tsconfig.tsbuildinfo
config/: app.json
scripts/: tauri-build.ps1  tauri-dev.ps1
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  types.rs
src-tauri/src/services/: chat_store.rs  config_service.rs  llamafile_manager.rs  mod.rs  model_service.rs  paths.rs  system_metrics.rs
src/components/chat/: AiBubble.tsx  ChatInput.tsx  ChatSidebar.tsx  ChatTopBar.tsx  TypingIndicator.tsx  UserBubble.tsx
src/components/layout/: HubSideNavBar.tsx  HubTopAppBar.tsx  Icon.tsx
src/components/models/: AddModelCard.tsx  ModelCard.tsx  ModelConfigModal.tsx  StartingOverlay.tsx  StatsPanel.tsx
src/components/settings/: SettingsModal.tsx
src/hooks/: useAppBootstrap.ts  useChats.ts  useModels.ts
src/lib/: llamafile-api.ts  tauri.ts  types.ts
src/pages/: ChatPage.tsx  ModelHubPage.tsx  SplashPage.tsx
src/store/: useAppStore.ts
src/styles/: globals.css
stitch_ai_model_hub/stitch_ai_model_hub/chat_com_ia/: code.html
stitch_ai_model_hub/stitch_ai_model_hub/sele_o_de_modelos_de_ia/: code.html
stitch_ai_model_hub/stitch_ai_model_hub/synthetic_intelligence_system/: DESIGN.md
